agregue una vista

--- a/Recursos/maquetado/colabHumana.html
+++ b/Recursos/maquetado/colabHumana.html
@@ -12,6 +12,9 @@
 
 <body class="body">
     <div class="position-fixed top-0 end-0 p-3">
+        <button type="button" class="btn btn-primary">  <q></q></button>
+    </div>
+    <div class="position-fixed top-0 end-0 p-3">
         <button type="button" class="btn btn-primary">  <q>Quienes somos</q></button>
         <button type="button" class="btn btn-primary">  <q>Perfil</q></button>
     </div>
@@ -32,9 +35,15 @@
                             </label>
                         </div>
                         <div class="form-check alinearIzquierda">
-                            <input class="form-check-input" type="checkbox" id="heladera" name="heladera">
-                            <label class="form-check-label" for="heladera">
-                                Encargarse de Heladera
+                            <input class="form-check-input" type="checkbox" id="viandas" name="heladera">
+                            <label class="form-check-label" for="viandas">
+                                Donación de viandas
+                            </label>
+                        </div>
+                        <div class="form-check alinearIzquierda">
+                            <input class="form-check-input" type="checkbox" id="distribucion" name="heladera">
+                            <label class="form-check-label" for="distribucion">
+                                Distribucion de viandas
                             </label>
                         </div>
                         <div class="text-center mt-3">
