agregue titulo a vistas

--- a/Recursos/vistas/home/home.html
+++ b/Recursos/vistas/home/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cuidandonos</title>
     <link rel="stylesheet" href="estilos/home.css">
     <link rel="stylesheet" href="estilos/registro.css">
     <link rel="stylesheet" href="estilos/menu-perfil.css">
