agregue algunas colab a Vistas falta mejorar

--- a/Recursos/vistas/home/home.html
+++ b/Recursos/vistas/home/home.html
@@ -33,8 +33,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Colaborar</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">Donar Dinero</a></li>
-                        <li ><a href="#">Donar Viandas</a></li>
+                        <li><a id = donar-dinero-drop href="#">Donar Dinero</a></li>
+                        <li ><a id = donar-vianda-drop href="#">Donar Viandas</a></li>
                         <li ><a href="#">Entregar Tarjeta</a></li>
                         <li><a href="#">Distribuir Viandas</a></li>
                     </ul>
