--- a/Recursos/vistas/home/home.html
+++ b/Recursos/vistas/home/home.html
@@ -35,7 +35,7 @@
                     <ul class="dropdown-content">
                         <li><a id = donar-dinero-drop href="#">Donar Dinero</a></li>
                         <li ><a id = donar-vianda-drop href="#">Donar Viandas</a></li>
-                        <li ><a id = entregar-tarjeta-drop href="#">Entregar Tarjeta</a></li>
+                        <li ><a id = entregarTarjeta-drop href="#">Entregar Tarjeta</a></li>
                         <li><a id = DistribuirVianda-drop href="#">Distribuir Viandas</a></li>
                     </ul>
                 </li>
